tests/any_propagation/any_propagation.exp
Error --------------------------------------------------------------------------------------------------- arrays.js:8:14

Cannot call `noop` with `new_arr` bound to `arr` because in array element: `NonNullable<Array<?string>>` [1] is not
exactly the same as `Array<string>` [2]. [incompatible-type]

The above-mentioned two types must be the same because arrays are invariantly typed. To fix the error,
- Either make `Array<NonNullable<Array<?string>>>` [3] and `Array<Array<string>>` [4] exactly the same
- Or make array type [4] a `ReadonlyArray`.
See https://flow.org/en/docs/faq/#why-cant-i-pass-an-arraystring-to-a-function-that-takes-an-arraystring-number.

   arrays.js:8:14
      8| noop<string>(new_arr);
                      ^^^^^^^

References:
   <BUILTINS>/core.js:1064:47
   1064|     filter(callbackfn: typeof Boolean): Array<NonNullable<T>>;
                                                       ^^^^^^^^^^^^^^ [1]
   arrays.js:3:37
      3| declare const noop : <T>(arr: Array<Array<T>>) => void;
                                             ^^^^^^^^ [2]
   <BUILTINS>/core.js:1064:41
   1064|     filter(callbackfn: typeof Boolean): Array<NonNullable<T>>;
                                                 ^^^^^^^^^^^^^^^^^^^^^ [3]
   arrays.js:3:31
      3| declare const noop : <T>(arr: Array<Array<T>>) => void;
                                       ^^^^^^^^^^^^^^^ [4]



Found 1 error
